[gd_scene load_steps=12 format=3 uid="uid://bfe2dxet4lf1v"]

[ext_resource type="Script" path="res://spell_selector.gd" id="1_0bnuv"]
[ext_resource type="Resource" uid="uid://bewx2xc3dni1j" path="res://Scripts/Spells/ResourceBasedSpells/Implementations/fireball_resource.tres" id="2_1vmit"]
[ext_resource type="PackedScene" uid="uid://47od46f865bb" path="res://Scenes/ui/equip_spell_icon.tscn" id="2_dsx8o"]
[ext_resource type="PackedScene" uid="uid://bev0g8poixok" path="res://Scenes/ui/keyboard/keyboard_letter.tscn" id="3_bibr0"]
[ext_resource type="Resource" uid="uid://d2y0t26nfnpom" path="res://Scripts/Spells/ResourceBasedSpells/Implementations/ice_shield_resource.tres" id="3_xsspr"]
[ext_resource type="Resource" uid="uid://cxwnko60enpfj" path="res://Scripts/Spells/ResourceBasedSpells/Implementations/thunderstorm_resource.tres" id="4_54xxk"]
[ext_resource type="Texture2D" uid="uid://c1gb3ubtx12g3" path="res://Sprites/Spells/Ice/Ball of ice.png" id="4_68c73"]
[ext_resource type="Resource" uid="uid://blokynehrwh36" path="res://Scripts/Spells/ResourceBasedSpells/Implementations/boomerang_resource.tres" id="5_q63b6"]
[ext_resource type="Texture2D" uid="uid://b5smhlcfn7y11" path="res://Sprites/Spells/Thunder.png" id="5_xmq1d"]
[ext_resource type="Texture2D" uid="uid://ccvvmalch3dea" path="res://Sprites/Boomerangs-Sheet.png" id="6_vs5eb"]
[ext_resource type="PackedScene" uid="uid://ct83717axhedp" path="res://Scenes/audio/typing_noises.tscn" id="7_7erjh"]

[node name="SpellSelector" type="Node2D"]
script = ExtResource("1_0bnuv")
available_spells = Array[String](["FIREBALL", "ICE SHIELD", "THUNDERSTORM", "BOOMERANG"])
available_spell_resources = Array[Resource("res://Scripts/Spells/ResourceBasedSpells/Base/spell_resource.gd")]([ExtResource("2_1vmit"), ExtResource("3_xsspr"), ExtResource("4_54xxk"), ExtResource("5_q63b6")])
equipped_spell = "FIREBALL"
equipped_spell_resource = ExtResource("2_1vmit")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="EquipSpellIcon_SlotOne" parent="CanvasLayer" instance=ExtResource("2_dsx8o")]
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -1896.0
offset_top = 190.0
offset_right = -1896.0
offset_bottom = 190.0
grow_horizontal = 0
grow_vertical = 1
spell_name = "FIREBALL"

[node name="KeyboardLetter" parent="CanvasLayer/EquipSpellIcon_SlotOne" instance=ExtResource("3_bibr0")]
position = Vector2(148, 49)
scale = Vector2(5, 5)
letter_string = "J"
letter_num = 9

[node name="EquipSpellIcon_SlotTwo" parent="CanvasLayer" instance=ExtResource("2_dsx8o")]
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -1896.0
offset_top = 330.0
offset_right = -1896.0
offset_bottom = 330.0
grow_horizontal = 0
grow_vertical = 1

[node name="BackgroundTexture" parent="CanvasLayer/EquipSpellIcon_SlotTwo" index="0"]
offset_top = -1.0
offset_bottom = 31.0

[node name="SpellSprite" parent="CanvasLayer/EquipSpellIcon_SlotTwo" index="1"]
position = Vector2(50, 46)
scale = Vector2(1.73744, 1.68543)
texture = ExtResource("4_68c73")
hframes = 1
vframes = 4
frame = 3

[node name="KeyboardLetterTwo" parent="CanvasLayer/EquipSpellIcon_SlotTwo" instance=ExtResource("3_bibr0")]
position = Vector2(148, 53)
scale = Vector2(5, 5)
letter_string = "K"
letter_num = 10

[node name="EquipSpellIcon_SlotThree" parent="CanvasLayer" instance=ExtResource("2_dsx8o")]
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -1896.0
offset_top = 470.0
offset_right = -1896.0
offset_bottom = 470.0
grow_horizontal = 0
grow_vertical = 1

[node name="SpellSprite" parent="CanvasLayer/EquipSpellIcon_SlotThree" index="1"]
position = Vector2(49, 56)
rotation = -0.0135039
scale = Vector2(0.657856, 0.406685)
texture = ExtResource("5_xmq1d")
hframes = 8
vframes = 1
frame = 1

[node name="KeyboardLetterThree" parent="CanvasLayer/EquipSpellIcon_SlotThree" instance=ExtResource("3_bibr0")]
position = Vector2(148, 53)
scale = Vector2(5, 5)
letter_string = "L"
letter_num = 11

[node name="EquipSpellIcon_SlotFour" parent="CanvasLayer" instance=ExtResource("2_dsx8o")]
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -1896.0
offset_top = 610.0
offset_right = -1896.0
offset_bottom = 610.0
grow_horizontal = 0
grow_vertical = 1

[node name="SpellSprite" parent="CanvasLayer/EquipSpellIcon_SlotFour" index="1"]
position = Vector2(48, 46)
texture = ExtResource("6_vs5eb")
hframes = 7
vframes = 4
frame = 17

[node name="KeyboardLetterFour" parent="CanvasLayer/EquipSpellIcon_SlotFour" instance=ExtResource("3_bibr0")]
position = Vector2(148, 53)
scale = Vector2(5, 5)
letter_string = ";"
letter_num = 31

[node name="TypingNoises" parent="." instance=ExtResource("7_7erjh")]

[editable path="CanvasLayer/EquipSpellIcon_SlotOne"]
[editable path="CanvasLayer/EquipSpellIcon_SlotTwo"]
[editable path="CanvasLayer/EquipSpellIcon_SlotThree"]
[editable path="CanvasLayer/EquipSpellIcon_SlotFour"]
